terraform/k8s-manifest/prometheus/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 namespace: prometheus
spec:
 rules:
   - host: grafana.k8s.home
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: prometheus-grafana
               port:
                 number: 80
