terraform/k8s-manifest/prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: prometheus
 namespace: prometheus
spec:
 rules:
   - host: prometheus.k8s.home
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: prometheus-kube-prometheus-prometheus
               port:
                 number: 9090
